# ustb-os-kernel

./: .gitignore  LICENSE
easy-fs-fuse/.cargo/: config.toml
easy-fs-fuse/src/: main.rs
easy-fs/src/: efs.rs  layout.rs  lib.rs  vfs.rs
kernel/: Cargo.toml  Makefile  build.rs
kernel/.cargo/: config.toml
kernel/.cargo/local/riscv/: Cargo.toml
kernel/src/: app_loader.rs  batch.rs  boot.rs  config.rs  main.rs
kernel/src/fs/: inode.rs  mod.rs  stdio.rs
kernel/src/loader/: flags.rs  mod.rs
kernel/src/mm/: address.rs  memory_set.rs  mod.rs  page_table.rs
kernel/src/sync/: mod.rs  up.rs
kernel/src/syscall/: fs.rs  mod.rs  process.rs
kernel/src/task/: context.rs  manager.rs  mod.rs  processor.rs  stride.rs  task.rs
kernel/src/trap/: context.rs  mod.rs  trap.S
kernel/src/utils/: console.rs  mod.rs  sbi.rs
user/: Makefile  build.py
user/c/: Makefile
user/c/apps/: hello.c  trace.c  trace_simple.c
user/c/lib/: lib.c  lib.h  stdio.c  stdio.h
user/rust/: Makefile
user/rust/.cargo/: config
user/rust/src/: console.rs  lib.rs
user/src/: syscall.rs
