[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
xmas-elf = "0.9" # https://docs.rs/xmas-elf/0.9.0/xmas_elf/
bitflags = "2.4"
buddy_system_allocator = "0.9"
riscv = "0.11.1" # https://docs.rs/riscv/0.11.1/riscv/
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }