[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
xmas-elf = "0.10" # https://docs.rs/xmas-elf/0.10.0/xmas_elf/
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fs" }